# tiketbot-hetashi

./: .gitignore  CLAUDE.md  DEMO_QUICK_START.md  LICENSE  NEXT_STEPS.md  README.md  TESTING_GUIDE.md  demo_server.py  pyproject.toml  requirements.txt  run_bot.py  start_bot.bat  websocket_server.py
alembic/: env.py
app/: __init__.py  main.py
app/api/: __init__.py  dependencies.py
app/api/v1/: categories.py  messages.py
app/models/: __init__.py  base.py  message.py
app/schemas/: category.py  common.py  ticket.py
app/services/: __init__.py  message_service.py  ticket_service.py  user_service.py
app/telegram/handlers/: commands.py  webapp.py
config/: .env.example
deployment/alembic/: env.py
deployment/config/: alembic.ini
design/: README.md
design/prompts/: apple-inspired-design-v2.md  nanobanana-interface-design.md
docker/: Dockerfile  docker-compose.yml
docs/: API.md  ARCHITECTURE.md  BUSINESS_PLAN.md  CHANGELOG.md  CONTRIBUTING.md  DATABASE.md  DESIGN_UPDATE_v1.2.md  INSTALLATION.md  NGROK_SETUP.md  ROADMAP.md  TECHNICAL_REQUIREMENTS.md
frontend/: debug-api.html  debug-console.js  debug-full.html  debug.html  index.html  test.html
frontend/css/: style.css
frontend/js/: api.js  main.js  websocket.js
scripts/: update_ngrok_url.py
src/: __init__.py
src/servers/: main.py  websocket_server.py
src/tikethet/: __init__.py  database.py  main.py
src/tikethet/api/: dependencies.py
src/tikethet/api/v1/: auth.py  categories.py  messages.py  tickets.py
src/tikethet/models/: category.py  notification.py  ticket.py  user.py
src/tikethet/schemas/: __init__.py  auth.py  message.py  ticket.py  user.py
src/tikethet/services/: auth_service.py  category_service.py  message_service.py  ticket_service.py  user_service.py
src/tikethet/telegram/: __init__.py  bot.py
src/tikethet/telegram/handlers/: __init__.py  admin.py  commands.py  webapp.py
